<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHistoryBack"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_layout_history"
                app:cardCornerRadius="@dimen/corner_card_history"
                app:cardElevation="@dimen/elevation_card_history">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_card_history"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_logo_history"
                        android:layout_marginLeft="@dimen/margin_sides_logo_history"
                        android:layout_marginRight="@dimen/margin_sides_logo_history"
                        android:layout_marginTop="@dimen/margin_top_logo_history"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitStart"
                        android:src="@drawable/image_history_logo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amatic_sc"
                        android:gravity="center"
                        android:text="@string/history_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_title_history"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_logo_app_history"
                        android:layout_marginLeft="@dimen/margin_sides_logo_app_history"
                        android:layout_marginRight="@dimen/margin_sides_logo_app_history"
                        android:layout_marginTop="@dimen/margin_top_logo_app_history"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/image_history_name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description2"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="normal"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description3"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="bold|italic"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_image_history"
                        android:layout_marginLeft="@dimen/margin_sides_image_history"
                        android:layout_marginRight="@dimen/margin_sides_image_history"
                        android:layout_marginTop="@dimen/margin_top_image_history"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_history_how"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_title_history"
                        android:fontFamily="@font/amatic_sc"
                        android:gravity="center"
                        android:text="@string/history_title1"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_title_history"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description4"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description5"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description6"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description7"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description8"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description9"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_description_history"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_image_history"
                        android:layout_marginLeft="@dimen/margin_sides_image_history"
                        android:layout_marginRight="@dimen/margin_sides_image_history"
                        android:layout_marginTop="@dimen/margin_top_image_history"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_history_us"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_title_history"
                        android:fontFamily="@font/amatic_sc"
                        android:gravity="center"
                        android:text="@string/history_title2"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_title_history"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description10"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description11"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/size_description_history"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_card_history"
                        android:layout_marginTop="@dimen/margin_card_history"
                        android:layout_marginRight="@dimen/margin_card_history"
                        android:fontFamily="@font/didact_gothic"
                        android:gravity="start"
                        android:text="@string/history_description12"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_description_history"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_icon_history"
                        android:layout_marginLeft="@dimen/margin_sides_icon_history"
                        android:layout_marginRight="@dimen/margin_sides_icon_history"
                        android:layout_marginTop="@dimen/margin_top_icon_history"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitCenter"
                        android:src="@drawable/image_history_icon"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_history"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|bottom">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/colorView"
            android:src="@drawable/ic_dismiss"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

</FrameLayout>